cmake_minimum_required(VERSION 3.18.0)
project(icp_demo VERSION 0.1.0 LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 17)
set(target_name icp_demo)

include(CTest)
enable_testing()
add_subdirectory(./icp)
file(GLOB sources CONFIGURE_DEPENDS ./demo/*.cpp ./demo/*.h ./demo/*.hpp)
add_executable(${target_name} ${sources})
target_include_directories(${target_name} PRIVATE ./icp ./ ./3rdParty/)
target_link_libraries(${target_name} icp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)